# Protocol

./: .gitignore  CMakeLists.txt
include/sculk/protocol/auth/: AuthenticationType.hpp  ClientProperties.hpp  ConnectionRequest.hpp  LegacyCertificateChain.hpp  LoginToken.hpp
include/sculk/protocol/codec/: MinecraftPacketIds.hpp  MinecraftPackets.hpp
include/sculk/protocol/codec/actor/: ActorDamageCause.hpp  ActorDataIDs.hpp  ActorEvent.hpp  ActorFlags.hpp  ActorLink.hpp  ActorType.hpp  AgentActionType.hpp  AgentAnimationType.hpp  AimAssistActorPriorityData.hpp  InteractionType.hpp  MetaData.hpp  POIBlockInteractionType.hpp  PlayerActionType.hpp  PropertySyncData.hpp  SyncedAttribute.hpp
include/sculk/protocol/codec/actor/attribute/: Attribute.hpp  AttributeData.hpp  AttributeLayerData.hpp  AttributeLayerSettings.hpp  BoolAttributeData.hpp  ColorAttributeData.hpp  EasingFunction.hpp  EnvironmentAttributeData.hpp  FloatAttributeData.hpp  RemoveEnvironmentAttributesData.hpp  UpdateAttributeLayerSettingsData.hpp  UpdateAttributeLayersData.hpp  UpdateEnvironmentAttributesData.hpp
include/sculk/protocol/codec/actor/player/: ControlScheme.hpp  DisconnectFailReason.hpp  GameType.hpp  LocatorBar.hpp  PlayStatus.hpp  PlayerActionType.hpp  PlayerAuthInputData.hpp  PlayerPermissionLevel.hpp  SerializedAbilitiesData.hpp  SerializedSkin.hpp  SyncedPlayerMovementSettings.hpp  UUID.hpp
include/sculk/protocol/codec/camera/: CameraAimAssist.hpp  CameraInstruction.hpp  CameraPreset.hpp  CameraSplineDefinition.hpp  EasingType.hpp
include/sculk/protocol/codec/command/: CommandChainedSubcommandData.hpp  CommandConstrainedValueData.hpp  CommandEnumData.hpp  CommandOriginType.hpp  CommandParameterData.hpp  CommandPermissionLevel.hpp  CurrentCmdVersion.hpp  SoftEnumUpdateType.hpp
include/sculk/protocol/codec/inventory/: InventoryLayout.hpp  InventoryLeftTabIndex.hpp  InventoryLeftTabPocketIndex.hpp  InventoryRightTabIndex.hpp
include/sculk/protocol/codec/inventory/container/: ContainerEnumName.hpp  ContainerID.hpp  ContainerType.hpp  FullContainerName.hpp  LegacySetItemSlot.hpp
include/sculk/protocol/codec/inventory/enchant/: EnchantOption.hpp  (+1 more)
include/sculk/protocol/codec/level/: AchievementIDs.hpp  DataStore.hpp  Difficulty.hpp  Experiments.hpp  GameRuleData.hpp  LegacyTelemetryEventType.hpp  LevelSoundEvent.hpp  MolangVersion.hpp  PrimitiveShapes.hpp  ServerTelemetryData.hpp  SpawnSettings.hpp  StructureSettings.hpp  SyncWorldClocks.hpp
include/sculk/protocol/codec/math/: Vec2.hpp  Vec3.hpp
include/sculk/protocol/codec/nbt/: CompoundTag.hpp  ListTag.hpp  TagType.hpp  TagVariant.hpp  ValueArrayTag.hpp  ValueTag.hpp
include/sculk/protocol/codec/packet/: ActorEventPacket.hpp  ActorPickRequestPacket.hpp  AddActorPacket.hpp  AddBehaviorTreePacket.hpp  AddItemActorPacket.hpp  AddPaintingPacket.hpp  AddPlayerPacket.hpp  AddVolumeEntityPacket.hpp  AgentActionEventPacket.hpp  AgentAnimationPacket.hpp  AnimateEntityPacket.hpp  AnimatePacket.hpp  AnvilDamagePacket.hpp  AutomationClientConnectPacket.hpp  AvailableActorIdentifiersPacket.hpp  AvailableCommandsPacket.hpp  AwardAchievementPacket.hpp  BiomeDefinitionListPacket.hpp  BlockActorDataPacket.hpp  BlockEventPacket.hpp  BlockPickRequestPacket.hpp  BookEditPacket.hpp  BossEventPacket.hpp  CameraAimAssistActorPriorityPacket.hpp  CameraAimAssistPacket.hpp  CameraAimAssistPresetsPacket.hpp  CameraInstructionPacket.hpp  CameraPacket.hpp  CameraPresetsPacket.hpp  CameraShakePacket.hpp  CameraSplinePacket.hpp  ChangeDimensionPacket.hpp  ChangeMobPropertyPacket.hpp  ChunkRadiusUpdatedPacket.hpp  ClientCacheBlobStatusPacket.hpp  ClientCacheMissResponsePacket.hpp  ClientCacheStatusPacket.hpp  ClientCameraAimAssistPacket.hpp  ClientMovementPredictionSyncPacket.hpp  ClientToServerHandshakePacket.hpp  (+188 more)
include/sculk/protocol/connection/: ClientNetworkSystem.hpp  NetworkStatus.hpp  ServerNetworkSystem.hpp  Session.hpp
include/sculk/protocol/connection/compression/: Snappy.hpp  Zlib.hpp
include/sculk/protocol/connection/encryption/: CryptoManager.hpp
include/sculk/protocol/connection/io/: ClientIoRuntime.hpp
include/sculk/protocol/utility/: Base64Url.hpp  BinaryStream.hpp  Enum.hpp  ReadOnlyBinaryStream.hpp  Result.hpp  SwapEndian.hpp  Variant.hpp
src/sculk/protocol/auth/: ClientProperties.cpp  ConnectionRequest.cpp  LegacyCertificateChain.cpp  LoginToken.cpp
src/sculk/protocol/auth/ssl/: ES384.hpp  RS256.hpp
src/sculk/protocol/codec/camera/: CameraAimAssist.cpp
src/sculk/protocol/codec/packet/: ActorEventPacket.cpp  ActorPickRequestPacket.cpp  AddActorPacket.cpp  AddBehaviorTreePacket.cpp  AddItemActorPacket.cpp  AddPaintingPacket.cpp  AddPlayerPacket.cpp  AddVolumeEntityPacket.cpp  AgentActionEventPacket.cpp  AgentAnimationPacket.cpp  AnimateEntityPacket.cpp  AnimatePacket.cpp  AnvilDamagePacket.cpp  AutomationClientConnectPacket.cpp  AvailableActorIdentifiersPacket.cpp  AvailableCommandsPacket.cpp  AwardAchievementPacket.cpp  BiomeDefinitionListPacket.cpp  BlockActorDataPacket.cpp  BlockEventPacket.cpp  BlockPickRequestPacket.cpp  BookEditPacket.cpp  BossEventPacket.cpp  CameraAimAssistActorPriorityPacket.cpp  CameraAimAssistPacket.cpp  CameraAimAssistPresetsPacket.cpp  CameraInstructionPacket.cpp  CameraPacket.cpp  CameraPresetsPacket.cpp  CameraShakePacket.cpp  CameraSplinePacket.cpp  ChangeDimensionPacket.cpp  ChangeMobPropertyPacket.cpp  ChunkRadiusUpdatedPacket.cpp  ClientCacheBlobStatusPacket.cpp  ClientCacheMissResponsePacket.cpp  ClientCacheStatusPacket.cpp  ClientCameraAimAssistPacket.cpp  ClientMovementPredictionSyncPacket.cpp  ClientToServerHandshakePacket.cpp  (+187 more)
src/sculk/protocol/codec/utility/: EnumName.hpp  Format.hpp
src/sculk/protocol/connection/: ClientNetworkSystem.cpp  ServerNetworkSystem.cpp  Session.cpp
src/sculk/protocol/connection/compression/: Snappy.cpp  Zlib.cpp
src/sculk/protocol/connection/encryption/: CryptoManager.cpp
src/sculk/protocol/connection/io/: ClientIoRuntime.cpp
src/sculk/protocol/connection/utility/: Reflection.hpp
src/sculk/protocol/ssl/: Base64Url.hpp  ES384.hpp  RS256.hpp
(+50 files in other folders)
